Related: tdf#144583 move current lok hidpi icon thing into SalGraphics

Change-Id: If34a2b15aebc5316783d72564ede23e02db04302
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139944
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>